--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "antd": "^5.14.1",
+    "create": "^0.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "swiper": "^11.0.6"
   },
   "devDependencies": {
